c2/search
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1193:24: error: use of undeclared identifier 'search_rc_index'
if ( captured == 13 || search_rc_index[captured] != search_rc_index[path[v11].captured] ) 
                       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1193:53: error: use of undeclared identifier 'search_rc_index'
if ( captured == 13 || search_rc_index[captured] != search_rc_index[path[v11].captured] ) 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1617:12: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + 3 * v59) = *( _OWORD *)&v148[v52].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1617:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + 3 * v59) = *( _OWORD *)&v148[v52].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1617:62: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + 3 * v59) = *( _OWORD *)&v148[v52].from; 
                                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1617:54: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + 3 * v59) = *( _OWORD *)&v148[v52].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1765:12: error: expected expression
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1765:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1765:60: error: expected expression
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1765:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1775:12: error: expected expression
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1775:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1775:54: error: expected expression
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1775:46: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1785:12: error: expected expression
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1785:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1785:36: error: expected expression
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1785:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
                           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1786:12: error: expected expression
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1786:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1786:41: error: expected expression
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1786:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1824:19: error: expected expression
v144 = *( _OWORD *)&killer1[v104].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1824:11: error: use of undeclared identifier '_OWORD'
v144 = *( _OWORD *)&killer1[v104].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1826:12: error: expected expression
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1826:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1826:46: error: expected expression
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1826:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1827:12: error: expected expression
*( _OWORD *)&killer2[v113].from = v144; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1827:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v113].from = v144; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1845:19: error: expected expression
v144 = *( _OWORD *)&killer2[v104].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1845:11: error: use of undeclared identifier '_OWORD'
v144 = *( _OWORD *)&killer2[v104].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1847:12: error: expected expression
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1847:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1847:46: error: expected expression
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1847:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1848:12: error: expected expression
*( _OWORD *)&killer3[v117].from = v144; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v117].from = v144; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1859:12: error: expected expression
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1859:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1859:46: error: expected expression
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/search.c:1859:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
                                     ^
42 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/search/src/obj/search.o] Error 1
